# spgs

./: DESCRIPTION  MD5  NAMESPACE  cleanup  configure  configure.ac
R/: MarkovChains.R  ag.test.R  agct.test.R  auxtests.R  chargaff.gibbs.test.R  chargaff0.test.R  chargaff1.test.R  chargaff2.test.R  counting.R  sysdata.rda
data/: datalist  nanoarchaeum.rda  pieris.rda
inst/: CITATION  NEWS.Rd
man/: ag.test.Rd  agct.test.Rd  array2vector.Rd  chargaff.gibbs.test.Rd  chargaff0.test.Rd  chargaff1.test.Rd  chargaff2.test.Rd  chisq.unif.test.Rd  complement.Rd  cylinder.counts.Rd  diffsign.test.Rd  diid.disturbance.Rd  diid.test.Rd  disambiguate.Rd  estimateMarkovChain.Rd  ks.unif.test.Rd  lb.test.Rd  markov.disturbance.Rd  markov.test.Rd  nanoarchaeum.Rd  oligoProfile.Rd  pair.counts.Rd  pieris.Rd  quadruple.counts.Rd  rank.test.Rd  rcspr2mat.Rd  reverseComplement.Rd  rstochmat.Rd  rstochvec.Rd  simulateMarkovChain.Rd  spgs-package.Rd  triple.counts.Rd  turningpoint.test.Rd
src/: Makevars.in  Makevars.win  sharedef.h  spgs-win.def  spgs.c  spgs.h  uint64.h
tests/: countingTest.Rout.savefile  profileTest.Rout.savefile
